# text-ip-adapter

./: .gitignore  LEARNINGS.md  Makefile  README.md  env.example  pyproject.toml
configs/: decoding_sampled_antirepeat.yaml  smoke.yaml  stage1_gemma.yaml  stage1_gemma3_4b_pt_poetry_v5_10_paired_completion_1300_slowlr.yaml  stage1_gemma3_4b_pt_poetry_v5_10_paired_completion_2000.yaml  stage1_gemma3_4b_pt_poetry_v5_10_paired_completion_explicit_neg_1300.yaml  stage1_gemma3_4b_pt_poetry_v5_10_style_2400.yaml  stage1_gemma4_e2b_poetry_v5_10_style_2000.yaml  stage1_gemma4_e2b_poetry_v5_10_style_continue_to_10k.yaml  stage1_gemma4_e2b_poetry_v5_10_style_slowlr_5k.yaml  stage1_gemma_contrastive.yaml  stage1_gemma_contrastive_03.yaml  stage1_gemma_llm.yaml  stage1_gemma_no_trunk.yaml  stage1_gemma_no_trunk_v2_big.yaml  stage1_gemma_no_trunk_v2_dryrun.yaml  stage1_gemma_no_trunk_v2_warmstart.yaml  stage1_v2_bundle.yaml  stage1_v2_bundle_lowmem.yaml  stage1_v2_warmstart_bigctx.yaml  stage1_v2_warmstart_minfix.yaml  stage1_v3_1_no_trunk_smoke.yaml  stage1_v3_2_no_trunk_smoke.yaml  stage1_v3_3_core3_no_contrastive_smoke.yaml  stage1_v3_3_corrected_poetry_core3_smoke.yaml  stage1_v3_4_artifact_clean_core3_smoke.yaml  stage1_v3_5_artifact_clean_core3_longer.yaml  stage1_v3_6_core2_poetry_screenplay_smoke.yaml  stage1_v3_7_core2_repaired_eval.yaml  stage1_v3_8_core2_cleanheldout_restart.yaml  stage1_v3_9_style_triplet_022continue.yaml  stage1_v3_no_trunk_warmstart.yaml  stage1_v4_1_styleclean_triplet_restart006_eval.yaml  stage1_v4_2_poetry_triplet_restart006.yaml  (+12 more)
docs/: megaplan.md
(+206 files in other folders)
